# notifbar

./: .gitattributes  CLAUDE.md  Cargo.toml  README.md  lefthook.yml
.github/workflows/: release.yml
scripts/: check-no-push-main.sh  test-launch-url.ps1  test-notification.ps1
src/: db.rs  main.rs  notification.rs  ui.rs
