[package]
name = "notifbar"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.59", features = [
    "UI_Notifications_Management",
    "UI_Notifications",
    "Foundation",
    "Foundation_Collections",
    "ApplicationModel",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Data_Xml_Dom",
    "Storage_Streams",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
] }
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1", features = ["full"] }
eframe = "0.31"
rusqlite = { version = "0.31", features = ["bundled"] }
tray-icon = "0.19"
